tests/cases/compiler/downlevelLetConst1/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.7.3/tests/cases/compiler/downlevelLetConst1.ts`, Apache-2.0 License

const
//~^ ERROR: Variable declaration list cannot be empty.